build_files/test/lib/error/includes/sub_include/error_prototype.h
/*
** EPITECH PROJECT, 2025
** sub_includes - error_prototype.h
** File description:
** <description>
*/

// Prototype //
#ifndef ERROR_P
    #define ERROR_P

    #include "error_include.h"
    #include "error_typedef.h"

#ifndef ERROR_P_BASE
        #define ERROR_P_BASE
void error_exist(void);
    #endif

#endif
